[package]
authors = ["SaltyKitkat <sun-yk19@mails.tsinghua.edu.cn>"]
description = "this is something wrote just for learning and probably useless"
edition = "2021"
name = "kvs"
version = "0.1.0"
[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[dependencies]
failure = "0.1.8"
serde_json = "1.0.64"
sled = "*"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
structopt = "0.3.21"

[dependencies.serde]
features = ["derive"]
version = "1.0.126"

[dev-dependencies]
assert_cmd = "1.0.5"
predicates = "1.0.8"
tempfile = "3.2.0"
walkdir = "2.3.2"

[profile]
[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
