[package]
authors = ["SaltyKitkat <sun-yk19@mails.tsinghua.edu.cn>"]
description = "this is something wrote just for learning and probably useless"
edition = "2021"
name = "kvs"
version = "0.1.0"
[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[dependencies]
failure = "0.1"
serde_json = "1.0"
sled = "0.34.7"
slog = "2.7"
slog-async = "2.6"
slog-term = "2.8"
structopt = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.2"
walkdir = "2.3"

[profile]
[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
panic = "abort"
strip = true
