[package]
authors = ["SaltyKitkat <sun-yk19@mails.tsinghua.edu.cn>"]
description = "this is something wrote just for learning rust and probably useless"
edition = "2021"
name = "kvs"
version = "0.1.0"
[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[lib]
crate-type = ["dylib","rlib"]

[dependencies]
crossbeam = "*"
serde_json = "*"
sled = "*"
slog = "*"
slog-async = "*"
slog-term = "*"
structopt = "*"
thiserror = "*"

[dependencies.serde]
features = [ "derive" ]
version = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
walkdir = "*"

[profile]
[profile.dev.package."*"]
opt-level = 3
debug = 0
[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
panic = "abort"
strip = true
